# statictorch

./: LICENSE  README.md  build_and_install_locally.ps1  build_and_upload.ps1  install_packages.ps1  pyproject.toml
generator/: generator.py
src/statictorch/: __init__.py  __init__.pyi  helpers.py  tensor_dimension_descriptor.py  tensor_nd.py
statictorch/: __init__.py  __init__.pyi
test/: test.py
