[project]
version = "0.0.2"
dependencies = []
description = "Provides type annotations for torch tensors."
authors = [
    { name = "yueyinqiu", email = "yueyinqiu@outlook.com"}
]
name = "statictorch"
license = { text = "MIT License" }
keywords = []
readme = "README.md"

[project.urls]
Repository = "https://github.com/yueyinqiu/statictorch.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["statictorch"]
