[project]
version = "0.0.5"
dependencies = []
description = "Provides type annotations for torch tensors."
authors = [
    { name = "yueyinqiu", email = "yueyinqiu@outlook.com"}
]
name = "statictorch"
license = { text = "MIT License" }
keywords = ["torch", "pytorch", "typing"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/yueyinqiu/statictorch.git"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "torch>=2.10.0",
]
