[project]
version = "0.2.0"
dependencies = []
description = "Provides type annotations for torch tensors."
authors = [
    { name = "yueyinqiu", email = "yueyinqiu@outlook.com"}
]
name = "statictorch"
license = { text = "MIT License" }
keywords = ["torch", "pytorch", "typing"]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Repository = "https://github.com/yueyinqiu/statictorch.git"

[build-system]
requires = ["uv_build>=0.9.28"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "torch>=2.10.0",
]
